# RaBbLE-Xperimental

./: .gitignore  Persona.md  README  README.md  RaBbLE.md  index.html  railway_ctl.sh  secrets.example
Ai/: README.md  RaBbLE_Config.js  RaBbLE_DependencyContainer.js  RaBbLE_EngineInterface.js  RaBbLE_MockFactory.js  TestFramework.js
Ai/tests/: q_command_tests.js  q_entity_tests.js  q_stream_tests.js  q_test_runner.js
BaBbLE/: RaBbLE_BaBbLE_Pipeline.js  RaBbLE_CommandRegistry.js  RaBbLE_ServiceRegistry.js
BaBbLE/commands/: q_attract_command.js  q_babble_command.js  q_collapse_command.js  q_composite_command.js  q_dream_command.js  q_dreamtest_command.js  q_from_command.js  q_garden_command.js  q_help_command.js  (+6 more)
JS-Xperiments/: README.md  VISUAL_ANALYSIS.md  debug.html  rabble.html
NeBuLA/: PROJECT_SUMMARY.md  README.md  index.js
Python-Xperiments/: README.md
docs/: architecture.md  editor.md
harness/: deploy.sh
ideas/: Creative_Enhancement_Proposals.md  Visual_Design_System.md
insights/: DISTILLED_LEARNINGS.md
js/: Rabble.js  RabbleEyes.js  RabbleMouth.js  RabbleRenderer.js  editor.js
python/RaBbLE.py/: CODEREVIEW.md  pyproject.toml  requirements.txt
python/RaBbLE.py/config/: emotions.rabl
python/RaBbLE.py/src/: main.py
python/RaBbLE.py/src/animation/: eye.py  face.py
python/RaBbLE.py/src/audio/: audio_handler.py
python/RaBbLE.py/src/config/: rabl_parser.py
python/RaBbLE.py/src/transcription/: transcriber.py
server/: .env.example  auth_routes.py  jane.py
server-Xperiment/: README.md
style/: Rabble.css  RabbleTheme.css
(+114 files in other folders)
